--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 	<div class="container">
-		<div class="gradient"></div>
+		<div class="box-wrapper">
+			<div class="gradient"></div>
+		</div>
+		<div class="shadow"></div>
+		<div class="shadow2"></div>
 		<div class="box"></div>
 		<div class="box1"></div>
 	</div>
