--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/normalize-css.css">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/main.css">
 	<title>Animation</title>
 </head>
 <body>
